--- a/src/ingredient.css
+++ b/src/ingredient.css
@@ -25,3 +25,21 @@ rec {
     font-weight: 400;
     line-height: normal;
 }
+
+ingredbox { 
+    display: flex;
+    align-items: center;
+    align-self: stretch;
+    box-shadow: 0px 0px 7px 0px rgba(79, 98, 89, 0.20);
+
+}
+
+ingredtext {
+    color: var(--black, #202124);
+/* body bold */
+    font-family: Lexend;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
