--- a/src/popups/PopUps.css
+++ b/src/popups/PopUps.css
@@ -1,12 +1,22 @@
+
+
+* {
+  font-family: Lexend;
+  color: #202124;
+  padding: 0px;
+  margin: 0px;
+}
 .popUp {
   /* Layout */
   display: flex;
   width: 410px;
   flex-direction: column;
   align-items: flex-start;
+  flex-shrink: 0;
+  border-radius: 16px;
 
   /* Styling */
-  box-shadow: 0px 2px 0px 0px rgba(79, 98, 89, 0.10);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 2px 0px 0px rgba(79, 98, 89, 0.10);
 }
 
 .content {
@@ -20,6 +30,7 @@
 
   /* Style */
   border-radius: 16px 16px 0px 0px;
+  background: var(--off-white, #FFFFF9);
 }
 
 .p {
@@ -47,6 +58,44 @@
   display: flex;
   align-items: center;
   gap: 4px;
+
+  color: #4F6259;
+}
+
+.increment {
+  display: flex;
+  width: 34px;
+  height: 34px;
+  padding: 7px 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  /* Style */
+  border-radius: 100%;
+  background: var(--grey, #D6DCD9);
+}
+
+.decrement {
+  display: flex;
+  width: 34px;
+  height: 34px;
+  padding: 7px 12px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  /* Style */
+  border-radius: 100%;
+  background: var(--grey, #D6DCD9);
+}
+
+.incrementors {
+  fill: var(--dark-grey, #4F6259);
+  width: 14px;
+  height: 14px;
 }
 
 .dropDown {
@@ -60,17 +109,29 @@
   /* Style */
   border-radius: 100px;
   background: var(--grey, #D6DCD9);
+  color: #4F6259;
 }
 
 .option {
   /* Layout */
   display: flex;
+  justify-content: center;
   align-items: center;
   align-self: stretch;
 
   /* Style */
   border-radius: 0px 0px 16px 16px;
   border-top: 1.5px solid var(--aqua, #A8CABA);
+
+
+  /* Typography */
+  color: var(--black, #202124);
+  /* body bold */
+  font-family: Lexend;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .optionButton {
@@ -105,4 +166,97 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+
+/******* *******/
+.incrementor {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.incrementor button {
+  background: #D6DCD9;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 50%;
+  font-size: 18px;
+  cursor: pointer;
+}
+input {
+  background-color: transparent;
+}
+.quantity-input {
+  display: flex;
+  height: 34px;
+  width: 82px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  /* Style */
+  border-radius: 16px;
+  border: 1.5px solid var(--shadow-grey, #9AAAA2);
+  background-color: transparent;
+
+  /* Typography */
+  color: var(--dark-grey, #4F6259);
+  /* small */
+  font-family: Lexend;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
+}
+
+.dropDown {
+  display: flex;
+  height: 34px;
+  padding: 5px 16px;
+  align-items: center;
+  gap: 13px;
+
+  /* Style */
+  border-radius: 100px;
+  background: var(--grey, #D6DCD9);
+}
+
+.unit-selector {
+  border: none;
+  background: transparent;
+  font-size: 16px;
+  padding: none;
+  cursor: pointer;
+
+  color: #4F6259;
+}
+
+.options {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  border-top: 1.5px solid #A8CABA;
+}
+
+.optionButton {
+  flex: 1;
+  padding: 16px;
+  font-size: 18px;
+  font-weight: bold;
+  background: #FFFFF9;
+  border: none;
+  cursor: pointer;
+}
+
+.optionButton:first-child {
+  border-right: 1.5px dashed #A8CABA;
+}
+
+
+svg {
+  width: 14px;
+  height: 14px;
+  fill: var(--dark-grey, #4F6259);
 }
