SetQuantity finished (stylewise)

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,8 @@
   --font-paragraph-style: normal;
   --font-paragraph-weight: 300;
   --line-paragraph-height: normal;
-
+  
+  --font-paragraph-bold-weight: 400;
 
 }
 
