--- a/src/styling/Pantry.css
+++ b/src/styling/Pantry.css
@@ -1,5 +1,85 @@
-.pantry-list {
+.pantry {
+  /* Layout */
+  display: flex;
+  width: 536px;
+  height: 778.4px;
+  padding: 20px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 26px;
+  flex-shrink: 0;
+  margin: 0px auto;
+
+  /* */
+  border-radius: 40px 40px 0px 0px;
+  background: var(--light-grey);
+
+  /* drop */
+  box-shadow: var(--inset-shadow);
+
+}
+.search-functions {
+  display: flex;
+  width: 536px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 14px;
+}
+
+.filters {
   display: flex;
   flex-direction: column;
-  gap: 12px; /* Adjust the spacing as needed */
+  align-items: flex-start;
+  gap: 4px;
+  align-self: stretch;
+}
+
+.row1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+}
+
+.storage-filters {
+  display: flex;
+  align-items: center;
+  gap: 6.4px;
+}
+
+.sortby-button {
+  display: flex;
+  padding: 3px 3px 3px 11px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+
+  border-radius: 100px;
+
+  height: 42px;
+}
+
+.sortby-button span {
+    color: var(--black);
+  /* small */
+  font-family: Lexend;
+  font-size: 12.8px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.sortby-button div {
+  display: flex;
+  align-items: center;
+  gap: 5.6px;
+}
+
+.row2 {
+  display: flex;
+  align-items: center;
+  gap: 6.4px;
+  align-self: stretch;
+  width: 100%;
 }
